--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -9,10 +9,46 @@
     flex-direction: column;
     align-items: center;
 
-    .fileItems {
-      width: 1000px;
+    .upload {
+      .fileItems {
+        width: 1000px;
+        padding: 20px 0;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .actions {
+        max-width: 1000px;
+        width: 100%;
+        display: flex;
+        padding-bottom: 40px;
+        justify-content: center;
+
+        .downloadAll {
+          width: 200px;
+          border: none;
+          background: #94febf;
+          color: #000000;
+          padding: 12px 24px;
+          cursor: pointer;
+          border-radius: 2px;
+
+          &.waiting {
+            cursor: wait;
+            opacity: 0.3;
+          }
+        }
+      }
+    }
+
+    .main {
       display: flex;
-      flex-direction: column;
+      height: 100vh;
+      align-items: center;
+
+      h1 {
+        user-select: none;
+      }
     }
   }
 }
