--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,11 +12,12 @@ a, button {
   cursor: pointer;
   appearance: none;
   color: inherit;
+  font: inherit;
 }
 
 :root {
-  font-family: 'Inconsolata', 'Monaco', monospace;
+  font-family: 'PT Mono', 'Inconsolata', 'Monaco', monospace;
   background: #000;
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
 }
