Add errors message

--- a/src/components/FileItem/FileItem.module.scss
+++ b/src/components/FileItem/FileItem.module.scss
@@ -53,6 +53,18 @@
         color: #94febf;
       }
     }
+
+    &.hasError {
+      border-color: #ff0000;
+
+      .progressInner {
+        display: none;
+      }
+
+      .progressStatus {
+        color: #ff0000;
+      }
+    }
   }
 
   .percent {
